added 2 more alert rules

--- a/prometheus/alert.rules.yml
+++ b/prometheus/alert.rules.yml
@@ -1,5 +1,5 @@
 groups:
-  - name: example-alert
+  - name: Alerts
     rules:
       - alert: HighCPUUsage
         expr: (1 - avg(rate(node_cpu_seconds_total{mode="idle"}[1m]))) * 100 > 80
@@ -9,3 +9,21 @@ groups:
         annotations:
           summary: "High CPU usage detected (instance {{ $labels.instance }})"
           description: "CPU usage is above 80% for more than 1 minute."
+
+      - alert: HighMemoryUsage
+        expr: (1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)) * 100 > 80
+        for: 1m
+        labels:
+          severity: warning
+        annotations:
+          summary: "High memory usage detected (instance {{ $labels.instance }})"
+          description: "Memory usage is above 80% for more than 1 minute."
+
+      - alert: LowDiskSpace
+        expr: (node_filesystem_avail_bytes{mountpoint="/",fstype!="tmpfs",fstype!="overlay"} / node_filesystem_size_bytes{mountpoint="/",fstype!="tmpfs",fstype!="overlay"}) * 100 < 10
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Low disk space on root mount (instance {{ $labels.instance }})"
+          description: "Free space on '/' is below 10%."
