--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DOCKER_COMPOSE_VERSION=2.35.1
 NODE_EXPORTER_VERSION=1.9.0
 PROJECT_DIR="/opt/Monitoring"
+# login for web Grafana
+GF_SECURITY_ADMIN_USER=admin
+# password for web Grafana
+GF_SECURITY_ADMIN_PASSWORD=admin
